# alga

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  generate-usage.sh  pyproject.toml  usage.md
.github/: dependabot.yml  renovate.json
.github/workflows/: checks.yml  mypy.yml  pre-commit.yml  pytest.yml  release-to-pypi.yml  test-pyapp.yml
src/alga/: __init__.py  __main__.py  cli_adhoc.py  cli_app.py  cli_channel.py  cli_input.py  cli_media.py  cli_power.py  cli_remote.py  cli_screen.py  cli_setup.py  cli_sound_output.py  cli_tv.py  cli_version.py  cli_volume.py  client.py  config.py  payloads.py  setup.py  types.py
stubs/: cfgs.pyi  getmac.pyi
tests/: conftest.py  test_cli_adhoc.py  test_cli_app.py  test_cli_channel.py  test_cli_input.py  test_cli_media.py  test_cli_power.py  test_cli_remote.py  test_cli_setup.py  test_cli_sound_output.py  test_cli_tv.py  test_cli_volume.py  test_client.py  test_config.py  test_main.py  test_payloads.py  test_types.py
